# cookiecutter-gfunc

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  template.env
{{cookiecutter.project_name}}/scripts/: deploy-function-pubsub.sh
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: settings.py
