[tool.poetry]
name = "cookiecutter-gfunc"
version = "0.1.0"
description = ""
authors = ["Tim Mironov <timirlan666@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"
pre-commit = "^2.15.0"
python-lsp-server = {extras = ["rope"], version = "^1.2.2"}
pyls-flake8 = "^0.4.0"
pylsp-mypy = "^0.5.2"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
